<resources>
    <string name="app_name">VeRecipes</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Home Activity -->
    <string name="home_loading">Logging in</string>
    <string name="home_login_error">Login error, please login again</string>

    <!-- Bottom Bar menu -->
    <string name="menu_bottombar_tab1">Profile</string>
    <string name="menu_bottombar_tab2">Today</string>
    <string name="menu_bottombar_tab3">Saved</string>

    <!-- Daily Recipes -->
    <string name="daily_recipe_reject">Nope</string>
    <string name="daily_recipe_accept">Save</string>
    <string name="daily_recipes_placeholder">You\'re done for today</string>

    <!-- Saved Recipes -->
    <string name="saved_recipes_placeholder">No saved recipes</string>
    <string name="saved_recipes_deleted_recipe">Recipe deleted</string>
    <string name="saved_recipes_deleted_recipe_cancel">Recipe re-saved</string>
    <string name="saved_recipes_deleted_recipe_undo">Undo</string>
    <string name="saved_recipes_preparation_time">Preparation time: %1d minutes</string>

    <!-- Recipe Viewer -->
    <string name="recipe_viewer_share">Share</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Login Screen -->
    <string name="login_welcome_phrase">Welcome to VeRecipes</string>
    <string name="login_button_login">Login</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_signup_catchphrase">No account yet? Join us!</string>
    <string name="login_loading">Authenticating</string>
    <string name="login_error">Invalid password or username</string>

    <!-- Signup Screen -->
    <string name="signup_welcome_phrase">Join VeRecipes</string>
    <string name="signup_button_signup">Create account</string>
    <string name="signup_login_catchphrase">Already a member? Login</string>
    <string name="signup_hint_username">Username (min. 3 characters)</string>
    <string name="signup_hint_email">Email</string>
    <string name="signup_hint_password">Password (min. 8 characters)</string>
    <string name="signup_hint_confirm_password">Confirm password</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="signup_loading">Creating account</string>
    <string name="signup_error">Account could not be created. Please try again</string>


    <!-- Input verification -->
    <string name="input_error_username_length">The username must be at least 3 characters long</string>
    <string name="input_error_username_characters">The username can only contain letters and numbers</string>

    <string name="input_error_password_length">The password must be at least 8 characters long</string>
    <string name="input_error_password_characters">The password cannot contain spaces</string>

    <string name="input_error_confirm_password">The passwords do not match</string>

    <string name="input_error_email">Invalid email address</string>

    <!-- Profile screen -->
    <string name="profile_hint_username">Username</string>
    <string name="profile_hint_email">Email</string>
    <string name="profile_button_logout">Logout</string>
    <string name="profile_user_presentation">User details:</string>


</resources>
